@@ -2,8 +2,8 @@ numpy
 pytz
 python-dateutil
 ruamel.yaml
-requests >= 2.21.0
-mmcif >= 0.50
+mmcif >= 0.54
 rcsb.utils.validation >= 0.20
 backports.tempfile; python_version < "3.0"
 PyNaCl >= 1.3.0
+requests >= 2.23
