@@ -45,9 +45,9 @@ setup(
         "numpy",
         "pytz",
         "python-dateutil",
-        "mmcif >= 0.50",
+        "mmcif >= 0.54",
         "ruamel.yaml",
-        "requests >= 2.21.0",
+        "requests >= 2.23.0",
         "rcsb.utils.validation >= 0.20",
         "PyNaCl >= 1.3.0",
         'backports.tempfile; python_version < "3.0"',
