@@ -62,3 +62,4 @@
  8-May-2020  - V0.62 Add default comment parser as a fallback for the FastaUtil()
 13-May-2020  - V0.63 Update test cases for py 2.7.18.
 26-May-2020  - V0.64 Adding timeout and user agent for url fetchs
+28-May-2020  - V0.65 Add alternative URL fetch methods using requests module
